--- a/catalog/view/theme/helium/template/account/login.twig
+++ b/catalog/view/theme/helium/template/account/login.twig
@@ -10,11 +10,10 @@
     {{ content_top }}
       <div class="row">
         <div class="col-sm-6">
-          <div class="well">
             <h2>{{ text_new_customer }}</h2>
             <p><strong>{{ text_register }}</strong></p>
             <p>{{ text_register_account }}</p>
-            <a href="{{ register }}" class="primary">{{ button_continue }}</a></div>
+            <a href="{{ register }}" class="primary">{{ button_continue }}</a>
         </div>
         <div class="col-sm-6">
           <div class="well">
@@ -23,7 +22,7 @@
             <form action="{{ action }}" method="post" enctype="multipart/form-data">
               <div class="form-group">
                 <label for="input-email">{{ entry_email }}</label>
-                <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" />
+                <input type="email" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" />
               </div>
               <div class="form-group">
                 <label for="input-password">{{ entry_password }}</label>
