--- a/catalog/view/theme/helium/template/account/register.twig
+++ b/catalog/view/theme/helium/template/account/register.twig
@@ -31,36 +31,72 @@
           {% endfor %}</div>
       </div>
       <div class="form-group required">
-        <label for="input-firstname">{{ entry_firstname }}</label>
-        <div class="col-sm-10">
-          <input type="text" name="firstname" value="{{ firstname }}" placeholder="{{ entry_firstname }}" id="input-firstname" />
-          {% if error_firstname %}
+        <label for="input-firstname">{{ entry_firstname }}</label>        
+        <input
+          type="text"
+          name="firstname"
+          value="{{ firstname }}"
+          placeholder="{{ entry_firstname }}"
+          id="input-firstname"
+          inputmode="text"
+          enterkeyhint="next"
+          autocapitalize="words"
+          minlength="3" maxlength="32"
+        />
+        {% if error_firstname %}
           <div class="text-danger">{{ error_firstname }}</div>
-          {% endif %} </div>
+        {% endif %}
       </div>
+
       <div class="form-group required">
         <label for="input-lastname">{{ entry_lastname }}</label>
-        <div class="col-sm-10">
-          <input type="text" name="lastname" value="{{ lastname }}" placeholder="{{ entry_lastname }}" id="input-lastname" />
-          {% if error_lastname %}
+        <input
+          type="text"
+          name="lastname"
+          value="{{ lastname }}"
+          placeholder="{{ entry_lastname }}"
+          id="input-lastname"
+          inputmode="text"
+          enterkeyhint="next"
+          autocapitalize="words"
+          minlength="3" maxlength="32"
+        />
+        {% if error_lastname %}
           <div class="text-danger">{{ error_lastname }}</div>
-          {% endif %} </div>
+        {% endif %}
       </div>
+
       <div class="form-group required">
         <label for="input-email">{{ entry_email }}</label>
-        <div class="col-sm-10">
-          <input type="email" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" />
-          {% if error_email %}
+        <input
+          type="email"
+          name="email"
+          value="{{ email }}"
+          placeholder="{{ entry_email }}"
+          id="input-email"
+          inputmode="email"
+          enterkeyhint="next"
+        />
+        {% if error_email %}
           <div class="text-danger">{{ error_email }}</div>
-          {% endif %} </div>
+        {% endif %} 
       </div>
+
       <div class="form-group required">
         <label for="input-telephone">{{ entry_telephone }}</label>
-        <div class="col-sm-10">
-          <input type="tel" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" />
-          {% if error_telephone %}
+        <input
+          type="tel"
+          name="telephone"
+          value="{{ telephone }}"
+          placeholder="{{ entry_telephone }}"
+          id="input-telephone"
+          inputmode="tel"
+          enterkeyhint="next"
+          minlength="3" maxlength="32"
+        />
+        {% if error_telephone %}
           <div class="text-danger">{{ error_telephone }}</div>
-          {% endif %} </div>
+        {% endif %} 
       </div>
       {% for custom_field in custom_fields %}
       {% if custom_field.type == 'select' %}
