--- a/catalog/view/theme/helium/template/account/return_form.twig
+++ b/catalog/view/theme/helium/template/account/return_form.twig
@@ -1,5 +1,5 @@
 {{ header }}
-<div id="account-return">
+<main id="account-return">
   <ul class="breadcrumb">
     {% for breadcrumb in breadcrumbs %}
     <li><a href="{{ breadcrumb.href }}"> {{ breadcrumb.text }}</a></li>
@@ -10,146 +10,172 @@
   {% endif %}
   <div class="row"> {{ column_left }}
 
-    <div id="content"> {{ content_top }}
+    <, id="content"> {{ content_top }}
       <h1>{{ heading_title }}</h1>
       <p>{{ text_description }}</p>
       <form action="{{ action }}" method="post" enctype="multipart/form-data" >
         <fieldset>
           <legend>{{ text_order }}</legend>
+          
           <div class="form-group required">
-            <label for="input-firstname">{{ entry_firstname }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="firstname" value="{{ firstname }}" placeholder="{{ entry_firstname }}" id="input-firstname" />
-              {% if error_firstname %}
+            <label for="input-firstname">{{ entry_firstname }}</label>        
+            <input
+              type="text"
+              name="firstname"
+              value="{{ firstname }}"
+              placeholder="{{ entry_firstname }}"
+              id="input-firstname"
+              inputmode="text"
+              enterkeyhint="next"
+              autocapitalize="words"
+              minlength="3" maxlength="32"
+            />
+            {% if error_firstname %}
               <div class="text-danger">{{ error_firstname }}</div>
-              {% endif %} </div>
+            {% endif %}
           </div>
+
           <div class="form-group required">
             <label for="input-lastname">{{ entry_lastname }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="lastname" value="{{ lastname }}" placeholder="{{ entry_lastname }}" id="input-lastname" />
-              {% if error_lastname %}
+            <input
+              type="text"
+              name="lastname"
+              value="{{ lastname }}"
+              placeholder="{{ entry_lastname }}"
+              id="input-lastname"
+              inputmode="text"
+              enterkeyhint="next"
+              autocapitalize="words"
+              minlength="3" maxlength="32"
+            />
+            {% if error_lastname %}
               <div class="text-danger">{{ error_lastname }}</div>
-              {% endif %} </div>
+            {% endif %}
           </div>
+
           <div class="form-group required">
             <label for="input-email">{{ entry_email }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" />
-              {% if error_email %}
+            <input
+              type="email"
+              name="email"
+              value="{{ email }}"
+              placeholder="{{ entry_email }}"
+              id="input-email"
+              inputmode="email"
+              enterkeyhint="next"
+            />
+            {% if error_email %}
               <div class="text-danger">{{ error_email }}</div>
-              {% endif %} </div>
+            {% endif %} 
           </div>
+
           <div class="form-group required">
             <label for="input-telephone">{{ entry_telephone }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" />
-              {% if error_telephone %}
+            <input
+              type="tel"
+              name="telephone"
+              value="{{ telephone }}"
+              placeholder="{{ entry_telephone }}"
+              id="input-telephone"
+              inputmode="tel"
+              enterkeyhint="next"
+              minlength="3" maxlength="32"
+            />
+            {% if error_telephone %}
               <div class="text-danger">{{ error_telephone }}</div>
-              {% endif %} </div>
+            {% endif %} 
           </div>
+
           <div class="form-group required">
+            <input type="text" name="order_id" value="{{ order_id }}" placeholder="{{ entry_order_id }}" id="input-order-id" />
             <label for="input-order-id">{{ entry_order_id }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="order_id" value="{{ order_id }}" placeholder="{{ entry_order_id }}" id="input-order-id" />
-              {% if error_order_id %}
+            {% if error_order_id %}
               <div class="text-danger">{{ error_order_id }}</div>
-              {% endif %} </div>
+            {% endif %}
           </div>
           <div class="form-group">
+            <input type="date" name="date_ordered" value="{{ date_ordered }}" placeholder="{{ entry_date_ordered }}" data-date-format="YYYY-MM-DD" id="input-date-ordered" />
             <label for="input-date-ordered">{{ entry_date_ordered }}</label>
-            <div class="col-sm-3">
-              <div class="input-group date">
-                <input type="text" name="date_ordered" value="{{ date_ordered }}" placeholder="{{ entry_date_ordered }}" data-date-format="YYYY-MM-DD" id="input-date-ordered" />
-                <span class="input-group-btn">
-                <button type="button" class="default"><i class="calendar"></i></button>
-                </span></div>
-            </div>
           </div>
         </fieldset>
         <fieldset>
           <legend>{{ text_product }}</legend>
           <div class="form-group required">
             <label for="input-product">{{ entry_product }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="product" value="{{ product }}" placeholder="{{ entry_product }}" id="input-product" />
-              <input type="hidden" name="product_id" value="{{ product_id }}" />
-              {% if error_product %}
-              <div class="text-danger">{{ error_product }}</div>
-              {% endif %} </div>
+            <input type="text" name="product" value="{{ product }}" placeholder="{{ entry_product }}" id="input-product" />
+            <input type="hidden" name="product_id" value="{{ product_id }}" />
+            {% if error_product %}
+            <div class="text-danger">{{ error_product }}</div>
+            {% endif %}
           </div>
           <div class="form-group required">
             <label for="input-model">{{ entry_model }}</label>
-            <div class="col-sm-10">
               <input type="text" name="model" value="{{ model }}" placeholder="{{ entry_model }}" id="input-model" />
               {% if error_model %}
-              <div class="text-danger">{{ error_model }}</div>
-              {% endif %} </div>
+                <div class="text-danger">{{ error_model }}</div>
+              {% endif %}
           </div>
           <div class="form-group">
+            
+            <input type="number" name="quantity" value="{{ quantity }}" placeholder="{{ entry_quantity }}" id="input-quantity" />
             <label for="input-quantity">{{ entry_quantity }}</label>
-            <div class="col-sm-10">
-              <input type="number" name="quantity" value="{{ quantity }}" placeholder="{{ entry_quantity }}" id="input-quantity" />
-            </div>
+            
           </div>
           <div class="form-group required">
-            <label>{{ entry_reason }}</label>
-            <div class="col-sm-10"> {% for return_reason in return_reasons %}
+            <legend>{{ entry_reason }}</legend>
+            {% for return_reason in return_reasons %}
               {% if return_reason.return_reason_id == return_reason_id %}
-              <div class="form-control">
-                <label>
+                <div class="form-control">
                   <input type="radio" name="return_reason_id" value="{{ return_reason.return_reason_id }}" checked="checked" />
-                  {{ return_reason.name }}</label>
-              </div>
+                  <label>{{ return_reason.name }}</label>
+                </div>
               {% else %}
-              <div class="form-control">
-                <label>
+                <div class="form-control">
                   <input type="radio" name="return_reason_id" value="{{ return_reason.return_reason_id }}" />
-                  {{ return_reason.name }}</label>
-              </div>
+                  <label>{{ return_reason.name }}</label>
+                </div>
               {% endif %}
-              {% endfor %}
-              {% if error_reason %}
+            {% endfor %}
+            {% if error_reason %}
               <div class="text-danger">{{ error_reason }}</div>
-              {% endif %} </div>
+            {% endif %} 
           </div>
           <div class="form-group required">
-            <label>{{ entry_opened }}</label>
-            <div class="col-sm-10">
-              <label> {% if opened %}
-                <input type="radio" name="opened" value="1" checked="checked" />
-                {% else %}
-                <input type="radio" name="opened" value="1" />
-                {% endif %}
-                {{ text_yes }}</label>
-              <label> {% if not opened %}
-                <input type="radio" name="opened" value="0" checked="checked" />
-                {% else %}
-                <input type="radio" name="opened" value="0" />
-                {% endif %}
-                {{ text_no }}</label>
-            </div>
+            <legend>{{ entry_opened }}</legend>
+            {% if opened %}
+              <input type="radio" name="opened" value="1" checked="checked" />
+              <label>{{ text_yes }}</label>
+            {% else %}
+              <input type="radio" name="opened" value="1" />
+              <label>{{ text_yes }}</label>
+            {% endif %}
+            {% if not opened %}
+              <input type="radio" name="opened" value="0" checked="checked" />
+              <label>{{ text_no }}</label>
+            {% else %}
+              <input type="radio" name="opened" value="0" />
+              <label>{{ text_no }}</label>
+            {% endif %}
           </div>
           <div class="form-group">
             <label for="input-comment">{{ entry_fault_detail }}</label>
-            <div class="col-sm-10">
-              <textarea name="comment" rows="10" placeholder="{{ entry_fault_detail }}" id="input-comment" class="form-control">{{ comment }}</textarea>
-            </div>
+            
+            <textarea name="comment" rows="10" placeholder="{{ entry_fault_detail }}" id="input-comment" class="form-control">{{ comment }}</textarea>
+            
           </div>
           {{ captcha }}
         </fieldset>
         {% if text_agree %}
-        <div class="buttons clearfix">
-          <div class="pull-left"><a href="{{ back }}" class="danger">{{ button_back }}</a></div>
-          <div class="pull-right">{{ text_agree }}
+          <div class="form-control">
             {% if agree %}
-            <input type="checkbox" name="agree" value="1" checked="checked" />
+              <input type="checkbox" name="agree" value="1" checked="checked" />
+              <label for="agree_with_terms">{{ text_agree }}</label>
             {% else %}
-            <input type="checkbox" name="agree" value="1" />
+              <input type="checkbox" name="agree" value="1" />
+              <label for="agree_with_terms">{{ text_agree }}</label>
             {% endif %}
-            <button type="submit" class="primary">{{ button_submit }}</button>
+            <button type="submit" class="primary">{{ button_continue }}</button>
           </div>
-        </div>
         {% else %}
         <div class="buttons clearfix">
           <div class="pull-left"><a href="{{ back }}" class="default">{{ button_back }}</a></div>
@@ -159,9 +185,9 @@
         </div>
         {% endif %}
       </form>
-      {{ content_bottom }}
-    {{ column_right }}
-</div>
+</main>
+{{ content_bottom }}
+{{ column_right }}
 <script type="text/javascript"><!--
 // $('.date').datetimepicker({
 // 	language: '{{ datepicker }}',
