--- a/catalog/view/theme/helium/template/checkout/guest.twig
+++ b/catalog/view/theme/helium/template/checkout/guest.twig
@@ -77,18 +77,20 @@
         {% if custom_field.location == 'account' %}
           {% if custom_field.type == 'select' %}
             <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
             
-              <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}">
-                <option value="">{{ text_select }}</option>
-                {% for custom_field_value in custom_field.custom_field_value %}
-                  {% if guest_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == guest_custom_field[custom_field.custom_field_id] %}
-                    <option value="{{ custom_field_value.custom_field_value_id }}" selected="selected">{{ custom_field_value.name }}</option>
-                  {% else %}
-                    <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
-                  {% endif %}
-                {% endfor %}
-              </select>
+            <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              <option value="">{{ text_select }}</option>
+              {% for custom_field_value in custom_field.custom_field_value %}
+                {% if guest_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == guest_custom_field[custom_field.custom_field_id] %}
+                  <option value="{{ custom_field_value.custom_field_value_id }}" selected="selected">{{ custom_field_value.name }}</option>
+                {% else %}
+                  <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
+                {% endif %}
+              {% endfor %}
+            </select>
 
             </div>
           {% endif %}
@@ -112,7 +114,6 @@
 
           {% if custom_field.type == 'checkbox' %}
           <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-            <label>{{ custom_field.name }}</label>
             <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
               {% for custom_field_value in custom_field.custom_field_value %}
                 <div class="form-control">
@@ -131,7 +132,9 @@
 
           {% if custom_field.type == 'text' %}
           <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
             <input
               type="text"
               name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
@@ -145,8 +148,14 @@
 
           {% if custom_field.type == 'textarea' %}
           <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-            <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}">{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}</textarea>
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
+            <textarea 
+              name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+              rows="5" 
+              placeholder="{{ custom_field.name }}" 
+              id="input-payment-custom-field{{ custom_field.custom_field_id }}">{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}</textarea>
           </div>
           {% endif %}
 
@@ -161,22 +170,26 @@
 
           {% if custom_field.type == 'date' %}
             <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+                {{ custom_field.name }}
+              </label>
               <input
-                type="text"
+                type="date"
                 name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
                 value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}"
                 placeholder="{{ custom_field.name }}"
-                data-date-format="YYYY-MM-DD"
+                step="1"
                 id="input-payment-custom-field{{ custom_field.custom_field_id }}"
-                step="3600"
+                data-date-format="YYYY-MM-DD"
               />
             </div>
           {% endif %}
 
           {% if custom_field.type == 'time' %}
           <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
             <input
               type="time"
               name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
@@ -186,11 +199,14 @@
               min="08:00" max="20:00"
               step="3600"
             />
+          </div>
           {% endif %}
 
           {% if custom_field.type == 'datetime' %}
             <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
               <input
                 type="datetime-local"
                 name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
@@ -219,7 +235,7 @@
           inputmode="text"
           enterkeyhint="next"
           autocapitalize="words"
-          minlength="3" maxlength="32"
+          minlength="3" maxlength="64"
           autocomplete="on"
         />
       </div>
@@ -305,38 +321,43 @@
         {% if custom_field.location == 'address' %}
 
           {% if custom_field.type == 'select' %}
-          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-            <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}">
-              <option value="">{{ text_select }}</option>
-              {% for custom_field_value in custom_field.custom_field_value %}
-                {% if guest_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == guest_custom_field[custom_field.custom_field_id] %}
-                  <option value="{{ custom_field_value.custom_field_value_id }}" selected="selected">{{ custom_field_value.name }}</option>
-                {% else %}
-                  <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
-                {% endif %}
-              {% endfor %}
-            </select>
-          </div>
+            <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
+                          <select 
+              name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+              id="input-payment-custom-field{{ custom_field.custom_field_id }}"
+            >
+                <option value="">{{ text_select }}</option>
+                {% for custom_field_value in custom_field.custom_field_value %}
+                  {% if guest_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == guest_custom_field[custom_field.custom_field_id] %}
+                    <option value="{{ custom_field_value.custom_field_value_id }}" selected="selected">{{ custom_field_value.name }}</option>
+                  {% else %}
+                    <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
+            </div>
           {% endif %}
 
           {% if custom_field.type == 'radio' %}
-          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-            <label>{{ custom_field.name }}</label>
-            <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
-              {% for custom_field_value in custom_field.custom_field_value %}
-                <div class="form-control"> 
-                  {% if guest_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == guest_custom_field[custom_field.custom_field_id] %}
-                    <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" checked="checked" />
-                    <label>{{ custom_field_value.name }}</label>
-                  {% else %}
-                    <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
-                    <label>{{ custom_field_value.name }}</label>
-                  {% endif %}
-                </div>
-              {% endfor %}
+            <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+              <div class="form-control"> 
+                <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
+                {% for custom_field_value in custom_field.custom_field_value %}
+                    {% if guest_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == guest_custom_field[custom_field.custom_field_id] %}
+                      <input id="input-payment-custom-field{{ custom_field.custom_field_id }}" type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" checked="checked" />
+                      <label>{{ custom_field_value.name }}</label>
+                    {% else %}
+                      <input id="input-payment-custom-field{{ custom_field.custom_field_id }}" type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
+                      <label>{{ custom_field_value.name }}</label>
+                    {% endif %}
+                  {% endfor %}
+              </div>
             </div>
-          </div>
           {% endif %}
 
           {% if custom_field.type == 'checkbox' %}
@@ -360,14 +381,18 @@
 
           {% if custom_field.type == 'text' %}
             <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
               <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
             </div>
           {% endif %}
 
           {% if custom_field.type == 'textarea' %}
           <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
             <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}">{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}</textarea>
           </div>
           {% endif %}
@@ -383,16 +408,28 @@
 
           {% if custom_field.type == 'date' %}
           <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
             <div class="input-group date">
-              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
+              <input
+                type="date"
+                name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
+                value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}"
+                placeholder="{{ custom_field.name }}"
+                step="1"
+                id="input-payment-custom-field{{ custom_field.custom_field_id }}"
+                data-date-format="YYYY-MM-DD"
+              />
             </div>
           </div>
           {% endif %}
 
           {% if custom_field.type == 'time' %}
           <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
             <div class="input-group time">
               <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
               </div>
@@ -401,7 +438,9 @@
 
           {% if custom_field.type == 'time' %}
             <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+              <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
               <div class="input-group datetime">
                 <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
               </div>
