--- a/catalog/view/theme/helium/template/checkout/payment_address.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_address.twig
@@ -24,72 +24,132 @@
   <div id="payment-new" style="display: {% if addresses %}none{% else %}block{% endif %};">
     <div class="form-group required">
       <label for="input-payment-firstname">{{ entry_firstname }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="firstname" value="" placeholder="{{ entry_firstname }}" id="input-payment-firstname" />
-      </div>
+      <input
+        type="text"
+        name="firstname"
+        value="{{ firstname }}"
+        placeholder="{{ entry_firstname }}"
+        id="input-payment-firstname"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="32"
+      />
     </div>
     <div class="form-group required">
       <label for="input-payment-lastname">{{ entry_lastname }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="lastname" value="" placeholder="{{ entry_lastname }}" id="input-payment-lastname" />
-      </div>
+      <input
+        type="text"
+        name="lastname"
+        value="{{ lastname }}"
+        placeholder="{{ entry_lastname }}"
+        id="input-payment-lastname"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="32"
+      />
     </div>
     <div class="form-group">
       <label for="input-payment-company">{{ entry_company }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="company" value="" placeholder="{{ entry_company }}" id="input-payment-company" />
-      </div>
+      <input
+        type="text"
+        name="company"
+        value="{{ company }}"
+        placeholder="{{ entry_company }}"
+        id="input-payment-company"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="64"
+        autocomplete="on"
+      />
     </div>
     <div class="form-group required">
       <label for="input-payment-address-1">{{ entry_address_1 }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="address_1" value="" placeholder="{{ entry_address_1 }}" id="input-payment-address-1" />
-      </div>
+      <input
+        type="text"
+        name="address_1"
+        value="{{ address_1 }}"
+        placeholder="{{ entry_address_1 }}"
+        id="input-payment-address-1"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="32"
+        autocomplete="on"
+      />
     </div>
     <div class="form-group">
       <label for="input-payment-address-2">{{ entry_address_2 }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="address_2" value="" placeholder="{{ entry_address_2 }}" id="input-payment-address-2" />
-      </div>
+      <input
+        type="text"
+        name="address_2"
+        value="{{ address_2 }}"
+        placeholder="{{ entry_address_2 }}"
+        id="input-payment-address-2"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="32"
+        autocomplete="on"
+      />
     </div>
     <div class="form-group required">
       <label for="input-payment-city">{{ entry_city }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="city" value="" placeholder="{{ entry_city }}" id="input-payment-city" />
-      </div>
+      <input 
+        type="text" 
+        name="city" 
+        value="{{ city }}"
+        placeholder="{{ entry_city }}" 
+        id="input-payment-city"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="32"
+        autocomplete="on"
+      />
     </div>
-    <div class="form-group required">
+    <div class="form-group">
       <label for="input-payment-postcode">{{ entry_postcode }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="postcode" value="" placeholder="{{ entry_postcode }}" id="input-payment-postcode" />
-      </div>
+      <input
+        type="text"
+        name="postcode"
+        value="{{ postcode }}"
+        placeholder="{{ entry_postcode }}"
+        id="input-payment-postcode"
+        inputmode="numeric"
+        enterkeyhint="next"
+        minlength="3" maxlength="32"
+        autocomplete="on"
+      />
     </div>
+
     <div class="form-group required">
       <label for="input-payment-country">{{ entry_country }}</label>
-      <div class="col-sm-10">
-        <select name="country_id" id="input-payment-country" class="form-control">
-          <option value="">{{ text_select }}</option>
-         {% for country in countries %}
+      <select name="country_id" id="input-payment-country">
+        <option value="">{{ text_select }}</option>
+        {% for country in countries %}
           {% if country.country_id == country_id %}
-          <option value="{{ country.country_id }}" selected="selected">{{ country.name }}</option>
+            <option value="{{ country.country_id }}" selected="selected">{{ country.name }}</option>
           {% else %}
-          <option value="{{ country.country_id }}">{{ country.name }}</option>
+            <option value="{{ country.country_id }}">{{ country.name }}</option>
           {% endif %}
-          {% endfor %}
-        </select>
-      </div>
+        {% endfor %}
+      </select>
     </div>
+
     <div class="form-group required">
       <label for="input-payment-zone">{{ entry_zone }}</label>
-      <div class="col-sm-10">
-        <select name="zone_id" id="input-payment-zone" class="form-control">
-        </select>
-      </div>
+      <select name="zone_id" id="input-payment-zone"></select>
     </div>
+
     {% for custom_field in custom_fields %}
     {% if custom_field.type == 'select' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
       <div class="col-sm-10">
         <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">
           <option value="">{{ text_select }}</option>
@@ -134,7 +194,9 @@
     {% endif %}
     {% if custom_field.type == 'text' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
       <div class="col-sm-10">
         <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
       </div>
@@ -142,7 +204,9 @@
     {% endif %}
     {% if custom_field.type == 'textarea' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
       <div class="col-sm-10">
         <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
       </div>
@@ -160,18 +224,22 @@
     {% if custom_field.type == 'date' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <div class="input-group date">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
-          <span class="input-group-btn">
-          <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </span></div>
-      </div>
+      <input
+        type="date"
+        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
+        value="{{ custom_field.value }}"
+        placeholder="{{ custom_field.name }}"
+        step="1"
+        id="input-payment-custom-field{{ custom_field.custom_field_id }}"
+        data-date-format="YYYY-MM-DD"
+      />
     </div>
     {% endif %}
     {% if custom_field.type == 'time' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
       <div class="col-sm-10">
         <div class="input-group time">
           <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
@@ -183,7 +251,9 @@
     {% endif %}
     {% if custom_field.type == 'time' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              {{ custom_field.name }}
+            </label>
       <div class="col-sm-10">
         <div class="input-group datetime">
           <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
