--- a/catalog/view/theme/helium/template/checkout/shipping_address.twig
+++ b/catalog/view/theme/helium/template/checkout/shipping_address.twig
@@ -22,175 +22,202 @@
   {% endif %}
   <br />
   <div id="shipping-new" style="display: {% if addresses %}none{% else %}block{% endif %};">
+    
     <div class="form-group required">
       <label for="input-shipping-firstname">{{ entry_firstname }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="firstname" value="" placeholder="{{ entry_firstname }}" id="input-shipping-firstname" />
-      </div>
+      <input
+        type="text"
+        name="firstname"
+        value="{{ firstname }}"
+        placeholder="{{ entry_firstname }}"
+        id="input-shipping-firstname"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="32"
+      />
     </div>
+
     <div class="form-group required">
       <label for="input-shipping-lastname">{{ entry_lastname }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="lastname" value="" placeholder="{{ entry_lastname }}" id="input-shipping-lastname" />
-      </div>
+      <input
+        type="text"
+        name="lastname"
+        value="{{ lastname }}"
+        placeholder="{{ entry_lastname }}"
+        id="input-shipping-lastname"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="32"
+      />
     </div>
+
     <div class="form-group">
       <label for="input-shipping-company">{{ entry_company }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="company" value="" placeholder="{{ entry_company }}" id="input-shipping-company" />
-      </div>
+      <input
+        id="input-shipping-company"
+        type="text"
+        name="company"
+        value="{{ company }}"
+        placeholder="{{ entry_company }}"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="64"
+        autocomplete="on"
+      />
     </div>
     <div class="form-group required">
       <label for="input-shipping-address-1">{{ entry_address_1 }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="address_1" value="" placeholder="{{ entry_address_1 }}" id="input-shipping-address-1" />
-      </div>
+      <input
+        id="input-shipping-address-1"
+        type="text"
+        name="address_1"
+        value="{{ address_1 }}"
+        placeholder="{{ entry_address_1 }}"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="32"
+        autocomplete="on"
+      />
     </div>
     <div class="form-group">
-      <label for="input-shipping-address-2">{{ entry_address_2 }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="address_2" value="" placeholder="{{ entry_address_2 }}" id="input-shipping-address-2" />
-      </div>
+        <label for="input-shipping-address-2">{{ entry_address_2 }}</label>
+        <input
+          id="input-shipping-address-2"
+          type="text"
+          name="address_2"
+          value="{{ address_2 }}"
+          placeholder="{{ entry_address_2 }}"
+          inputmode="text"
+          enterkeyhint="next"
+          autocapitalize="words"
+          minlength="3" maxlength="32"
+          autocomplete="on"
+        />
     </div>
     <div class="form-group required">
       <label for="input-shipping-city">{{ entry_city }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="city" value="" placeholder="{{ entry_city }}" id="input-shipping-city" />
-      </div>
+      <input 
+        id="input-shipping-city"
+        type="text" 
+        name="city"
+        value="{{ city }}"
+        placeholder="{{ entry_city }}" 
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="32"
+        autocomplete="on"
+      />
     </div>
-    <div class="form-group required">
+    <div class="form-group">
       <label for="input-shipping-postcode">{{ entry_postcode }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="postcode" value="{{ postcode }}" placeholder="{{ entry_postcode }}" id="input-shipping-postcode" />
-      </div>
+      <input
+        type="text"
+        name="postcode"
+        value="{{ postcode }}"
+        placeholder="{{ entry_postcode }}"
+        id="input-shipping-postcode"
+        inputmode="numeric"
+        enterkeyhint="next"
+        minlength="3" maxlength="32"
+        autocomplete="on"
+      />
     </div>
     <div class="form-group required">
       <label for="input-shipping-country">{{ entry_country }}</label>
-      <div class="col-sm-10">
-        <select name="country_id" id="input-shipping-country" class="form-control">
-          <option value="">{{ text_select }}</option>
-          {% for country in countries %}
-          {% if country.country_id == country_id %}
-          <option value="{{ country.country_id }}" selected="selected">{{ country.name }}</option>
-          {% else %}
-          <option value="{{ country.country_id }}">{{ country.name }}</option>
-           {% endif %}
-           {% endfor %}
-        </select>
-      </div>
+      <select name="country_id" id="input-shipping-country" >
+        <option value="">{{ text_select }}</option>
+        {% for country in countries %}
+        {% if country.country_id == country_id %}
+        <option value="{{ country.country_id }}" selected="selected">{{ country.name }}</option>
+        {% else %}
+        <option value="{{ country.country_id }}">{{ country.name }}</option>
+          {% endif %}
+          {% endfor %}
+      </select>
     </div>
     <div class="form-group required">
       <label for="input-shipping-zone">{{ entry_zone }}</label>
-      <div class="col-sm-10">
         <select name="zone_id" id="input-shipping-zone" class="form-control">
         </select>
-      </div>
     </div>
    {% for custom_field in custom_fields %}
     {% if custom_field.type == 'select' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control">
-          <option value="">{{ text_select }}</option>
-          {% for custom_field_value in custom_field.custom_field_value %}
+      <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control">
+        <option value="">{{ text_select }}</option>
+        {% for custom_field_value in custom_field.custom_field_value %}
           <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
-          {% endfor %}
-        </select>
-      </div>
+        {% endfor %}
+      </select>
     </div>
     {% endif %}
     {% if custom_field.type == 'radio' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label>{{ custom_field.name }}</label>
-      <div class="col-sm-10">
         <div id="input-shipping-custom-field{{ custom_field.custom_field_id }}">
           {% for custom_field_value in custom_field.custom_field_value %}
           <div class="form-control">
-            <label>
-              <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
-              {{ custom_field_value.name }}</label>
+            <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
+            <label>{{ custom_field_value.name }}</label>
           </div>
           {% endfor %}
-        </div>
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'checkbox' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label>{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <div id="input-shipping-custom-field{{ custom_field.custom_field_id }}">
-          {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="form-control">
-            <label>
-              <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
-              {{ custom_field_value.name }}</label>
-          </div>
-          {% endfor %}
+      <div id="input-shipping-custom-field{{ custom_field.custom_field_id }}">
+        {% for custom_field_value in custom_field.custom_field_value %}
+        <div class="form-control">
+          <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
+          <label>{{ custom_field_value.name }}</label>
         </div>
+        {% endfor %}
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'text' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
-      </div>
+      <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
     </div>
     {% endif %}
     {% if custom_field.type == 'textarea' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
-      </div>
+      <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
     </div>
     {% endif %}
     {% if custom_field.type == 'file' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label>{{ custom_field.name }}</label>
-      <div class="col-sm-10">
         <button type="button" id="button-shipping-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
         <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
-      </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'date' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <div class="input-group date">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
-          <span class="input-group-btn">
-          <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </span></div>
-      </div>
+      <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
     </div>
     {% endif %}
     {% if custom_field.type == 'time' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <div class="input-group time">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
-          <span class="input-group-btn">
-          <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </span></div>
-      </div>
+      <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
     </div>
     {% endif %}
     {% if custom_field.type == 'datetime' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <div class="input-group datetime">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
-          <span class="input-group-btn">
-          <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </span></div>
-      </div>
+      <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
     </div>
     {% endif %}
     {% endfor %}
