--- a/catalog/view/theme/helium/template/extension/total/shipping.twig
+++ b/catalog/view/theme/helium/template/extension/total/shipping.twig
@@ -8,8 +8,7 @@
       <div >
         <div class="form-group required">
           <label for="input-country">{{ entry_country }}</label>
-          <div class="col-sm-10">
-            <select name="country_id" id="input-country" class="form-control">
+            <select name="country_id" id="input-country">
               <option value="">{{ text_select }}</option>
               {% for country in countries %}
               {% if country.country_id == country_id %}
@@ -19,21 +18,25 @@
               {% endif %}
               {% endfor %}
             </select>
-          </div>
         </div>
         <div class="form-group required">
           <label for="input-zone">{{ entry_zone }}</label>
-          <div class="col-sm-10">
-            <select name="zone_id" id="input-zone" class="form-control">
-            </select>
-          </div>
+            <select name="zone_id" id="input-zone" class="form-control"></select>
         </div>
-        <div class="form-group required">
-          <label for="input-postcode">{{ entry_postcode }}</label>
-          <div class="col-sm-10">
-            <input type="text" name="postcode" value="{{ postcode }}" placeholder="{{ entry_postcode }}" id="input-postcode" />
-          </div>
-        </div>
+		<div class="form-group">
+			<label for="input-postcode">{{ entry_postcode }}</label>
+			<input
+			  type="text"
+			  name="postcode"
+			  value="{{ postcode }}"
+			  placeholder="{{ entry_postcode }}"
+			  id="input-postcode"
+			  inputmode="numeric"
+			  enterkeyhint="next"
+			  minlength="3" maxlength="32"
+			  autocomplete="on"
+			/>
+		  </div>
         <button type="button" id="button-quote" class="primary">{{ button_quote }}</button>
       </div>
       <script type="text/javascript"><!--
