--- a/catalog/view/theme/helium/template/information/contact.twig
+++ b/catalog/view/theme/helium/template/information/contact.twig
@@ -102,12 +102,18 @@
           </div>
           <div class="form-group required">
             <label for="input-email">{{ entry_email }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="email" value="{{ email }}" id="input-email" />
-              {% if error_email %}
+            <input
+              type="email"
+              name="email"
+              value="{{ email }}"
+              placeholder="{{ entry_email }}"
+              id="input-email"
+              inputmode="email"
+              enterkeyhint="next"
+            />
+            {% if error_email %}
               <div class="text-danger">{{ error_email }}</div>
-              {% endif %}
-            </div>
+            {% endif %} 
           </div>
           <div class="form-group required">
             <label for="input-enquiry">{{ entry_enquiry }}</label>
