--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400&display=swap');
 
-/* .rating input[type="radio"]:focus ~ label {
-	border: 2px solid;
-} */
-
 :root {
 	--background-body:#ddd;
 	--background-blocks:#f4f4f4;
@@ -591,6 +587,9 @@ select {
 	padding-right:35px;
 	box-shadow: inset 0 0 0 2px var(--button-base);
 }
+/* Separation between select groups */
+optgroup[label] { border-top: 1px solid currentColor }
+
 select::-ms-expand {
 	display:none
 }
@@ -1612,7 +1611,7 @@ form {
 	transition: color var(--animation-duration);
 }
 .form-control:focus-within {
-	color: var(--primary-color);
+	/* color: var(--primary-color); */
 }
   
 input[type="checkbox"], input[type="radio"] {
